🔨 Replace discord.gg with /community

--- a/pages/workbook/typing-test.mdx
+++ b/pages/workbook/typing-test.mdx
@@ -207,7 +207,7 @@ If you would like to see the complete code, you can do so [here](https://github.
 
 # Discord Community
 
-If you have questions about anything related to NexLiber or this workbook, you're welcome to ask our community on [Discord](https://discord.gg/CvZGEjyzbR)!
+If you have questions about anything related to NexLiber or this workbook, you're welcome to ask our community on [Discord](/community)!
 
 export default ({ children }) => (
     <WorkbookLayout projectTitle="Typing Test" content={children} />
