--- a/pages/workbook/fresh-project-manager.mdx
+++ b/pages/workbook/fresh-project-manager.mdx
@@ -549,7 +549,7 @@ If you would like to see the complete code, you can do so [here](https://github.
 
 # Discord Community
 
-If you have questions about anything related to NexLiber or this workbook, you're welcome to ask our community on [Discord](https://discord.gg/CvZGEjyzbR)!
+If you have questions about anything related to NexLiber or this workbook, you're welcome to ask our community on [Discord](/community)!
 
 export default ({ children }) => (
     <WorkbookLayout projectTitle="Fresh Project Manager" content={children} />
