🔖 Complete Workbook: Hand-Drawn Digit Classifier

--- a/pages/workbook/hand-drawn-digit-classifier.mdx
+++ b/pages/workbook/hand-drawn-digit-classifier.mdx
@@ -1,5 +1,6 @@
 import WorkbookLayout from "../../layouts/WorkbookLayout";
 import Quiz from "../../components/workbook/quiz";
+import Image from "next/image";
 
 # Setup
 
@@ -8,6 +9,8 @@ This project can be done on Google Colaboratory (Colab). However, to do so, you 
 # About the Project
 
 You will be building an image classifier using [Keras](https://keras.io/). The machine learning model used is a [CNN](https://en.wikipedia.org/wiki/Convolutional_neural_network) (Convolutional Neural Network) and will be classifying hand-drawn digits from the renowned [MNIST](https://en.wikipedia.org/wiki/MNIST_database) dataset.
+
+This Workbook was written by an intern at [String<Image src="https://raw.githubusercontent.com/String-sg/string-brand-guide/main/4.%20Svg%20Separate%20Files/mark_green.svg" alt="String" width={20} height={20}/>](https://www.string.sg/).
 
 # Preparing the Dataset
 
