fix: added folder structure image to tenzies workbook

--- a/pages/workbook/tenzies.mdx
+++ b/pages/workbook/tenzies.mdx
@@ -1,5 +1,6 @@
 import WorkbookLayout from "../../layouts/WorkbookLayout";
 import Quiz from "../../components/workbook/quiz";
+import Pic from "../../components/workbook/pic";
 
 ## Setup
 
@@ -38,6 +39,14 @@ Tenzies is a game where the player must match 10 dice having the same number on 
 Now that we understand what we're going to do, let's begin coding!
 
 Before we start coding, let's clean up our folder and only leave the files we need. So after clean up, the folder sturcture will be like this
+{/* src="https://raw.githubusercontent.com/xyntechx/NexLiber-Projects/main/Tenzies/tenzies-assets/tenzies-project-folder-structure.png" */}
+
+<Pic
+  src="/../public/tenzies-project-folder-structure.png"
+  alt="Tenzies project folder structure"
+  width={200}
+  height={300}
+/>
 
 In our App.ts, let's put the following code there
 
