🔖 Complete Workbook: Tenzies

--- a/pages/workbook/tenzies.mdx
+++ b/pages/workbook/tenzies.mdx
@@ -37,6 +37,13 @@ Now that we understand what we're going to do, let's begin coding!
 
 Before we start coding, let's clean up our folder and only leave the files we need. So after clean up, the folder sturcture will be like this
 
+<Pic
+    src="https://raw.githubusercontent.com/xyntechx/NexLiber-Projects/main/Tenzies/tenzies-assets/tenzies-project-folder-structure.PNG"
+    alt="Tenzies Project Structure"
+    width={233}
+    height={490}
+/>
+
 In our App.ts, let's put the following code.
 
 ```javascript
