🔖 Complete Workbook: Tenzies

--- a/pages/workbook/tenzies.mdx
+++ b/pages/workbook/tenzies.mdx
@@ -1,5 +1,6 @@
 import WorkbookLayout from "../../layouts/WorkbookLayout";
 import Quiz from "../../components/workbook/quiz";
+import Pic from "../../components/workbook/pic";
 
 # Prerequisite Applications
 
