--- a/pages/workbook/tenzies.mdx
+++ b/pages/workbook/tenzies.mdx
@@ -36,7 +36,7 @@ Tenzies is a game where the player must match 10 dice having the same number on 
 
 Now that we understand what we're going to do, let's begin coding!
 
-Before we start coding, let's clean up our folder and only leave the files we need. So after clean up, the folder sturcture will be like this
+Before we start coding, let's clean up our folder and only leave the files we need. So after clean up, the folder structure will be like this:
 
 <Pic
   src="https://raw.githubusercontent.com/xyntechx/NexLiber-Projects/main/Tenzies/tenzies-assets/tenzies-project-folder-structure.PNG"
@@ -45,7 +45,7 @@ Before we start coding, let's clean up our folder and only leave the files we ne
   height={490}
 />
 
-In the hooks folder, we will be creating a custom hook which we would use later down the line. Create a `windowSize.tsx` file and add the following code there
+In the hooks folder, we will be creating a custom hook which we would use later down the line. Create a **windowSize.tsx** file and add the following code there.
 
 ```javascript
 import { useEffect, useState } from "react";
@@ -336,11 +336,11 @@ And the error message is gone.
 
 # Dynamically Rendering the Die Value
 
-Now we are getting values from our state when the component mounts and we need the `die` component to display this value. So we want to pass it down as a prop and since we are using typescript we would need to specify the type for the props that will be passed.
+Now we are getting values from our state when the component mounts and we need the **die** component to display this value. So we want to pass it down as a prop and since we are using typescript we would need to specify the type for the props that will be passed.
 
-To learn more about react with typescript, click [here](https://react-typescript-cheatsheet.netlify.app/)
+To learn more about React with TypeScript, click [here](https://react-typescript-cheatsheet.netlify.app/).
 
-We update our `die` component by adding props in the app.tsx and receiving them in the die component jsx
+We update our **die** component by adding props in the app.tsx and receiving them in the die component jsx.
 
 ```javascript
 // the Die component in component
@@ -384,7 +384,7 @@ function rollDice() {
 
 **rollDice()** maps through the dice state and returns the **generateNewDie()** which will then be saved to the state. Anytime the button is clicked, the **rollDice()** is called and the numbers on the screen change.
 
-# Holding the die
+# Holding the Die
 
 The problem now is that when we click a die we cannot hold that die and generate new numbers for the rest of the die that were not held. So, let us create a function for this.
 
@@ -447,9 +447,9 @@ export default function Die({ id, value, isHeld, hold }: DiePropsType) {
 }
 ```
 
-# Winning the game
+# Winning the Game
 
-To win the game, we have to check if all the dice are held and if they all have the same value. if truthy, we change the button text to start a new game. For this, let's write the following.
+To win the game, we have to check if all the dice are held and if they all have the same value. if truthy, we change the button text to start a new game. For this, let's write the following:
 
 ```javascript
 const [tenzies, setTenzies] = React.useState(false);
@@ -477,13 +477,13 @@ function newGame() {
 
 We use the higher order funtion [every](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/every) to check if every object in the array is true and also we select the first value and check if all the values in every object matches it. If truthy, then the game ends and tenzies is set to true and the button text turns to New Game for the start of a new Game.
 
-The **newGame()** function sets tenzies to false and changes the **dice** state to be random numbers
+The **newGame()** function sets tenzies to false and changes the **dice** state to be random numbers.
 
 ### Wrapping Up
 
 Just before that, let us display some confetti that will signal to the user that the game has been won. We can do this with the [react-confetti package](https://www.npmjs.com/package/react-confetti).
 
-We install it with `npm i react-confetti` and import `Confetti` from the package. From the docs we need to pass this `Confetti` component height and width props which is just to allow the confetti work on the full screen. The `windowSize.tsx` file in the hooks folder which returns just that, so we can destructure what we need from there.
+We install it with **npm i react-confetti** and import **Confetti** from the package. According to the docs, we need to pass this **Confetti** component height and width props to allow the confetti to work on the full screen. The **windowSize.tsx** file in the hooks folder returns just that, so we can destructure what we need from there.
 
 The codebase becomes
 
@@ -576,6 +576,8 @@ export default function App() {
   );
 }
 ```
+
+If you would like to see the complete code, you can do so [here](https://github.com/xyntechx/NexLiber-Projects/tree/main/Tenzies)!
 
 # Discord Community
 
